# sea-schema

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Readme.md  index.php
.github/ISSUE_TEMPLATE/: config.yml  feature-request.md
.github/workflows/: rust.yml
build-tools/: docker-compose.yml  make-sync.sh
sea-schema-derive/: Cargo.toml
sea-schema-derive/src/: lib.rs
sea-schema-sync/: Cargo.toml
sea-schema-sync/src/mysql/discovery/executor/: real.rs
sea-schema-sync/src/mysql/query/: schema.rs  table.rs
sea-schema-sync/src/postgres/discovery/executor/: real.rs
sea-schema-sync/src/postgres/parser/: table_constraints.rs
sea-schema-sync/src/postgres/writer/: column.rs
sea-schema-sync/src/sqlite/def/: column.rs  table.rs  types.rs
sea-schema-sync/src/sqlite/executor/: mod.rs  real.rs
sea-schema-sync/src/sqlx_types/: real.rs
sea-schema-sync/tests/discovery/sqlite/: Cargo.toml
sea-schema-sync/tests/discovery/sqlite/src/: main.rs
sea-schema-sync/tests/live/sqlite/: Cargo.toml
sea-schema-sync/tests/writer/sqlite/: Cargo.toml
src/: connection.rs  lib.rs  name.rs  parser.rs  probe.rs  util.rs
src/migration/: cli.rs  connection.rs  database.rs  error.rs  manager.rs  migrator.rs  mod.rs  query.rs  seaql_migrations.rs  statement.rs  util.rs
src/mysql/: mod.rs  probe.rs  schema.rs
src/mysql/def/: char_set.rs  charset.rs  column.rs  constraint.rs  foreign_key.rs  index.rs  mod.rs  schema.rs  statistics.rs  storage_engine.rs  system.rs  table.rs  types.rs  version.rs
src/mysql/discovery/: mod.rs
src/mysql/discovery/executor/: mock.rs  mod.rs  real.rs
src/mysql/parser/: column.rs  constraint.rs  foreign_key.rs  index.rs  mod.rs  system.rs  table.rs  version.rs
src/mysql/query/: char_set.rs  column.rs  constraint.rs  foreign_key.rs  index.rs  mod.rs  schema.rs  table.rs  version.rs
src/mysql/schema/: discovery.rs  executor.rs  mod.rs
src/mysql/writer/: column.rs  foreign_key.rs  index.rs  mod.rs  table.rs  types.rs
src/postgres/: mod.rs  probe.rs
src/postgres/def/: column.rs  constraints.rs  schema.rs  table.rs  types.rs
src/postgres/def/types/: pgvector.rs
src/postgres/discovery/: mod.rs
src/postgres/discovery/executor/: mock.rs  real.rs
src/postgres/parser/: column.rs  mod.rs  pg_indexes.rs  table.rs  table_constraints.rs
src/postgres/parser/constraints/: mod.rs  unique.rs
src/postgres/query/: char_set.rs  column.rs  enumeration.rs  mod.rs  pg_indexes.rs  schema.rs  table.rs  table_constraints.rs
src/postgres/query/constraints/: check_constraints.rs  key_column_usage.rs  mod.rs  referential_constraints.rs  table_constraints.rs
src/postgres/writer/: column.rs  constraints.rs  enumeration.rs  mod.rs  table.rs
src/postgresql/: mod.rs
src/postgresql/def/: column.rs  constraints.rs  mod.rs  schema.rs  types.rs
src/postgresql/query/: char_set.rs  mod.rs  table.rs
src/sqlite/: columns.rs  discovery.rs  error.rs  errors.rs  mod.rs  probe.rs  query.rs  schema.rs  tabledef.rs  types.rs
src/sqlite/def/: column.rs  schema.rs  table.rs  types.rs
src/sqlite/executor/: mock.rs  real.rs  rusqlite.rs
src/sqlx_types/: mock.rs  mod.rs  real.rs
tests/discovery/: Cargo.toml  schema.rs
tests/discovery/mysql/: Cargo.toml
tests/discovery/mysql/src/: main.rs
tests/discovery/postgres/: Cargo.toml  Readme.md  schema.rs
tests/discovery/postgres/src/: main.rs
tests/discovery/sqlite/: Cargo.toml
tests/discovery/sqlite/src/: main.rs
tests/discovery/src/: main.rs
tests/live/mysql/: Cargo.toml  Readme.md
tests/live/mysql/src/: main.rs
tests/live/postgres/: Cargo.toml
tests/live/postgres/src/: main.rs
tests/live/sqlite/: Cargo.toml  foo.db
tests/live/sqlite/src/: main.rs
tests/migration/: Cargo.toml  Readme.md
tests/migration/src/: lib.rs  m20220118_000001_create_cake_table.rs  m20220118_000002_create_fruit_table.rs  m20220118_000003_seed_cake_table.rs  main.rs
tests/migration/tests/: mod.rs
tests/musicbrainz/postgres/: musicbrainz-schema.sql
tests/mysql_sakila/: Cargo.toml  schema.rs
tests/mysql_sakila/src/: main.rs
tests/partially_unique_index/: Cargo.toml
tests/partially_unique_index/src/: main.rs
tests/sakila/postgres/: sakila-schema.sql
tests/writer/: Cargo.toml
tests/writer/mysql/: Cargo.toml  Readme.md
tests/writer/mysql/src/: main.rs
tests/writer/postgres/: Cargo.toml  schema.sql
tests/writer/postgres/src/: main.rs
tests/writer/postgres_enum/: Cargo.toml
tests/writer/postgres_enum/src/: main.rs
tests/writer/sqlite/: Cargo.toml
tests/writer/sqlite/src/: main.rs
tests/writer/src/: main.rs
