[workspace]
members = [
    ".",
    "tests/discovery/mysql",
    "tests/discovery/postgres",
    "tests/discovery/sqlite",
    "tests/writer/mysql",
    "tests/writer/postgres",
    "tests/writer/sqlite",
    "tests/live/mysql",
    "tests/live/postgres",
    "tests/live/sqlite",
    "tests/partially_unique_index",
]

[package]
name = "sea-schema"
version = "0.17.0-rc.17"
authors = [ "Chris Tsang <tyt2y7@gmail.com>" ]
edition = "2024"
description = "🌿 SQL schema definition and discovery"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sea-schema"
repository = "https://github.com/SeaQL/sea-schema"
categories = ["database"]
keywords = ["database", "sql", "mysql", "postgres"]
rust-version = "1.94.0"

[package.metadata.docs.rs]
features = ["default"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "sea_schema"
path = "src/lib.rs"

[dependencies]
async-trait = { version = "0.1", default-features = false }
sea-schema-derive = { version = "0.3.0", path = "sea-schema-derive", default-features = false }
sea-query = { version = "1.0.0-rc.18", default-features = false, features = ["derive"] }
sea-query-sqlx = { version = "0.8.0-rc.1", default-features = false, optional = true }
serde = { version = "1", default-features = false, optional = true, features = ["derive"] }
sqlx = { version = "0.9", default-features = false, optional = true }
log = { version = "0.4", default-features = false, optional = true }

[features]
default = ["mysql", "postgres", "sqlite", "discovery", "writer", "probe"]
debug-print = ["log"]
mysql = ["sea-query/backend-mysql"]
postgres = ["sea-query/backend-postgres"]
postgres-vector = ["sea-query/postgres-vector", "sea-query-sqlx/postgres-vector"]
sqlite = ["sea-query/backend-sqlite"]
def = []
discovery = ["parser"]
parser = ["query"]
query = ["def"]
writer = ["def"]
planetscale = []
sync = []
probe = ["query"]
sqlx-dep = ["sqlx"]
sqlx-all = ["sqlx-mysql", "sqlx-postgres", "sqlx-sqlite"]
sqlx-mysql = [
    "mysql",
    "sqlx-dep",
    "sea-query-sqlx/sqlx-mysql",
    "sqlx/mysql",
]
sqlx-postgres = [
    "postgres",
    "sqlx-dep",
    "sea-query-sqlx/sqlx-postgres",
    "sqlx/postgres",
]
sqlx-sqlite = [
    "sqlite",
    "sqlx-dep",
    "sea-query-sqlx/sqlx-sqlite",
    "sqlx/sqlite",
]
runtime-actix = [
    "sqlx?/runtime-tokio",
    "sea-query-sqlx?/runtime-actix",
]
runtime-async-std = [
    "sqlx?/runtime-async-std",
    "sea-query-sqlx?/runtime-async-std",
]
runtime-tokio = [
    "sqlx?/runtime-tokio",
    "sea-query-sqlx?/runtime-tokio",
]
tls-none = [
    "sqlx?/tls-none",
    "sea-query-sqlx?/tls-none"
]
tls-native-tls = [
    "sqlx?/tls-native-tls",
    "sea-query-sqlx?/tls-native-tls"
]
tls-rustls = [
    "sqlx?/tls-rustls",
    "sea-query-sqlx?/tls-rustls"
]
tls-rustls-aws-lc-rs = [
    "sqlx?/tls-rustls-aws-lc-rs",
    "sea-query-sqlx?/tls-rustls-aws-lc-rs"
]
tls-rustls-ring = [
    "sqlx?/tls-rustls-ring",
    "sea-query-sqlx?/tls-rustls-ring"
]
tls-rustls-ring-native-roots = [
    "sqlx?/tls-rustls-ring-native-roots",
    "sea-query-sqlx?/tls-rustls-ring-native-roots"
]
tls-rustls-ring-webpki = [
    "sqlx?/tls-rustls-ring-webpki",
    "sea-query-sqlx?/tls-rustls-ring-webpki"
]

# TODO: Remove those as a breaking change.
runtime-actix-native-tls = ["tls-native-tls", "runtime-actix"]
runtime-async-std-native-tls = ["tls-native-tls", "runtime-async-std"]
runtime-tokio-native-tls = ["tls-native-tls", "runtime-tokio"]
runtime-actix-rustls = ["tls-rustls", "runtime-actix"]
runtime-async-std-rustls = ["tls-rustls", "runtime-async-std"]
runtime-tokio-rustls = ["tls-rustls", "runtime-tokio"]

rusqlite = []
with-serde = ["serde"]

# This allows us to develop using a local version of sea-query
[patch.crates-io]
# sea-query = { path = "../sea-query" }
# sea-query = { git = "https://github.com/SeaQL/sea-query", branch = "master" }
