[package]
name = "sea-schema-derive"
version = "0.1.0"
authors = [ "Chris Tsang <tyt2y7@gmail.com>" ]
edition = "2018"
description = "Derive macro for sea-schema's Name trait"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sea-schema"
repository = "https://github.com/SeaQL/sea-schema"
categories = [ "database" ]
keywords = [ "database", "sql", "mysql", "postgres", "sqlite" ]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", default-features = false, features = [ "derive", "parsing", "proc-macro", "printing" ] }
quote = { version = "1", default-features = false }
heck = { version = "0.4", default-features = false }
proc-macro2 = { version = "1", default-features = false }
