[workspace]
members = [
    ".",
    "tests/discovery/sqlite",
    "tests/live/sqlite",
    "tests/writer/sqlite",
]

[package]
name = "sea-schema-sync"
version = "0.17.0-rc.16"
authors = [ "Chris Tsang <tyt2y7@gmail.com>" ]
edition = "2024"
description = "🌿 SQL schema definition and discovery"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sea-schema"
repository = "https://github.com/SeaQL/sea-schema"
categories = ["database"]
keywords = ["database", "sql", "mysql", "postgres"]
rust-version = "1.85.0"

[package.metadata.docs.rs]
features = ["default"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "sea_schema"
path = "src/lib.rs"

[dependencies]
sea-schema-derive = { version = "0.3.0", path = "../sea-schema-derive", default-features = false }
sea-query = { version = "1.0.0-rc.32", default-features = false, features = ["derive"] }
sea-query-rusqlite = { version = "0.8.0-rc.16", optional = true }
serde = { version = "1", default-features = false, optional = true, features = ["derive"] }
log = { version = "0.4", default-features = false, optional = true }

[features]
default = ["sync", "sqlite", "discovery", "writer", "probe"]
debug-print = ["log"]
mysql = ["sea-query/backend-mysql"]
postgres = ["sea-query/backend-postgres"]
postgres-vector = ["sea-query/postgres-vector"]
sqlite = ["sea-query/backend-sqlite"]
def = []
discovery = ["parser"]
parser = ["query"]
query = ["def"]
writer = ["def"]
planetscale = []
sync = []
probe = ["query"]
sqlx-dep = []
sqlx-mysql = []
sqlx-postgres = []
sqlx-sqlite = []
rusqlite = ["sqlite", "sea-query-rusqlite"]
with-serde = ["serde"]

# This allows us to develop using a local version of sea-query
[patch.crates-io]
# sea-query = { path = "../sea-query" }
# sea-query = { git = "https://github.com/SeaQL/sea-query", branch = "master" }
