[package]
name = "sea-schema-migration-test"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sea-schema = { path = "../../", default-features = false, features = [ "migration" ] }
sea-orm = { git = "https://github.com/SeaQL/sea-orm.git", branch = "conn-relax-sized-bound", version = "0.6.0", default-features = false, features = ["sqlx-all", "runtime-async-std-native-tls"] }

[dev-dependencies]
env_logger = { version = "^0" }
log = { version = "^0" }
