[package]
name = "sea-schema-mysql-sakila-test"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
async-std = "1.8"
sea-schema = { path = "../../", features = [ "with-serde", "sqlx-mysql", "runtime-async-std-native-tls" ] }
sea-query = { version = "^0", features = [ ] }
serde_json = { version = "^1" }
sqlx = { version = "^0" }