[package]
name = "sea-schema-discovery-test-mysql"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
async-std = { version = "1.8", features = [ "attributes" ] }
sea-schema = { path = "../../../", default-features = false, features = [ "with-serde", "sqlx-mysql", "runtime-async-std-native-tls", "discovery" ] }
serde_json = { version = "^1" }
sqlx = { version = "^0" }