[package]
name = "sea-schema-discovery-test-postgres"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
async-std = { version = "1.8", features = [ "attributes", "tokio1" ] }
sea-schema = { path = "../../../", default-features = false, features = [ "with-serde", "sqlx-postgres", "runtime-async-std-native-tls", "discovery", "debug-print" ] }
serde_json = { version = "^1" }
sqlx = { version = "^0.5" }
env_logger = { version = "^0" }
log = { version = "^0" }