[package]
name = "sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.8", features = [ "attributes", "tokio1" ] }
sea-schema = { path = "../../../", default-features = false, features = [
    "runtime-async-std-native-tls",
    "discovery",
    "writer",
    "debug-print",
    "parser",
    "sqlx-sqlite",
    "sqlite",
] }
serde_json = { version = "^1" }
sqlx = { version = "^0.5", features = [
    "sqlite",
    "runtime-async-std-native-tls",
] }
pretty_assertions = { version = "^0.7" }
