[package]
name = "sea-schema-writer-test-sqlite"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
async-std = { version = "1.8", features = [ "attributes", "tokio1" ] }
sea-schema = { path = "../../../", default-features = false, features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "discovery", "writer", "debug-print" ] }
serde_json = { version = "^1" }
sqlx = { version = "^0.5" }